# personalitygen

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/personalitygen/: personality.py
tests/: test_personality.py  test_randomness.py  test_traits.py
