[project]
name = "personalitygen"
version = "0.1.0"
description = "Generate and manage simulated human-like personalities based on the Big Five model."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "B.T. Franklin"}]
keywords = ["personality", "big-five", "ocean", "simulation"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/btfranklin/personalitygen"
Issues = "https://github.com/btfranklin/personalitygen/issues"
Changelog = "https://github.com/btfranklin/personalitygen/releases"
Repository = "https://github.com/btfranklin/personalitygen.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
packages = [{include = "personalitygen", from = "src"}]

[tool.pdm.build]
excludes = ["tests/**"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flake8>=7.3.0",
]

[tool.pdm.scripts]
test = "pytest"
lint = "flake8 src tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
